--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -7,6 +7,16 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
     }
+    subprojects {
+        project.configurations.all {
+            resolutionStrategy.eachDependency { details ->
+                if (details.requested.group == 'androidx.core'
+                        && !details.requested.name.contains('androidx') ) {
+                    details.useVersion "1.0.1"
+                }
+            }
+        }
+    }
 }
 
 allprojects {
