enableLocationService return type changed to Future<bool>

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,3 +35,7 @@ android {
         api 'com.google.android.gms:play-services-nearby:17.0.0'
     }
 }
+
+dependencies {
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+}
