--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: nearby_connections
 description: Plugin for the android NearbyConnections API. Bytes and Files Supported.
-version: 2.0.1-dev
+version: 2.0.0
 homepage: https://github.com/mannprerak2/nearby_connections
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
+  flutter: ">=1.20.0 <2.0.0"
 
 dependencies:
   flutter:
