--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 2.0.2
 homepage: https://github.com/mannprerak2/nearby_connections
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0-29.10.beta <3.0.0'
+  # sdk: ">=2.12.0-0 <3.0.0"
   flutter: ">=1.20.0 <2.0.0"
 
 dependencies:
