--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,15 +3,12 @@ description: Demonstrates how to use the nearby_connections plugin.
 publish_to: 'none'
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  image_picker: ^0.6.1+2
+  image_picker: ^0.7.4
 
 dev_dependencies:
   flutter_test:
