--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.0
 
 flutter:
   plugin:
     platforms:
       android:
         package: com.pkmnapps.nearby_connections
+        pluginClass: NearbyConnectionsPlugin
+      ios:
         pluginClass: NearbyConnectionsPlugin
