--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -21,7 +21,7 @@ jobs:
     - run: flutter packages get
 
     # Check for any formatting issues in the code.
-    - run: flutter format --set-exit-if-changed .
+    - run: dart format --set-exit-if-changed .
 
     # Statically analyze the Dart code for any errors.
     - run: flutter analyze .
