Remove permission/ location check/enable methods. Update example to use other packages

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     path: ../
   path_provider: ^2.0.2
   permission_handler: ^10.3.0
-
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
