--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 group 'com.pkmnapps.nearby_connections'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 buildscript {
     repositories {
@@ -22,17 +22,32 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    namespace "com.pkmnapps.nearby_connections"
-    compileSdkVersion 33
+    if (project.android.hasProperty("namespace")) {
+        namespace 'com.pkmnapps.nearby_connections'
+    }
+
+    compileSdk 34
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 19
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     lintOptions {
         disable 'InvalidPackage'
     }
-    dependencies{
+
+    dependencies {
         api 'com.google.android.gms:play-services-nearby:19.2.0'
     }
+    
+    tasks.withType(JavaCompile) {
+        options.deprecation = true
+    }
+    
 }
