--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,10 +1,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pkmnapps.nearby_connections">
+  package="com.pkmnapps.nearby_connections">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <!-- Required for Nearby Connections -->
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+  <uses-permission android:name="android.permission.BLUETOOTH" />
+  <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:minSdkVersion="29"
+    android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:minSdkVersion="31"
+    android:name="android.permission.BLUETOOTH_ADVERTISE" />
+  <uses-permission android:minSdkVersion="31"
+    android:name="android.permission.BLUETOOTH_CONNECT" />
+  <uses-permission android:minSdkVersion="31"
+    android:name="android.permission.BLUETOOTH_SCAN" />
+  <uses-permission android:minSdkVersion="32"
+    android:name="android.permission.NEARBY_WIFI_DEVICES" />
 
-    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
-    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 </manifest>
